# foundation

./: .coveragerc  .editorconfig  .gitignore  .mypy  README.md  cookiecutter.json  setup.cfg  setup.py
hooks/: post_gen_project.py  pre_gen_project.py
src/: README.md
src/example/: __init__.py
tools/: README.md  format.sh  format_watcher.xml  setup_license.sh
{{ cookiecutter.project_name | slugify }}/: LICENSE  README.md  black.toml  setup.cfg
{{ cookiecutter.project_name | slugify }}/tests/: test_import.py
{{ cookiecutter.project_name | slugify }}/{{ cookiecutter.project_slug }}/: __init__.py
{{cookiecutter.project_slug}}/: .coveragerc  .gitignore  .gitmodules  LICENSE  setup.cfg
