## More info:
# https://setuptools.readthedocs.io/en/latest/setuptools.html
# https://packaging.python.org/guides/distributing-packages-using-setuptools
# https://www.python.org/dev/peps/pep-0345/#metadata-version

[venv]
extras =
    dev

[metadata]
url = https://github.com/HeavenVolkoff/foundation
name = foundation
author = Vítor Vasconcellos
version = 0.2.3
license = BSD-3-Clause
keywords =
    base
    modules
    package
    bootstrap
    foundation
maintainer = Vítor Vasconcellos
description = A simple foundation for building python packages
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: BSD License :: 3-Clause "New" or "Revised" License (BSD-3-Clause)
    # https://pypi.org/pypi?%3Aaction=list_classifiers
download_url =
project_urls =
    Bug Tracker = https://github.com/HeavenVolkoff/foundation/issues
    Source Code = https://github.com/HeavenVolkoff/foundation
author_email = vasconcellos.dev@gmail.com
maintainer_email = vasconcellos.dev@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

## These options are deprecated or not relevant to the objective of this package
# provides (DEPRECATED: https://bugs.python.org/issue1635217)
# requires (DEPRECATED: https://bugs.python.org/issue1635217)
# obsoletes (DEPRECATED: https://bugs.python.org/issue1635217)
# platforms (IRRELEVANT: Only relevant if there is no classifier for platform)

[options]
# bool
zip_safe = True
    # Indicates whether your package is able to be run from within a zip archive
# list-semi
setup_requires =
    pip != 19.0
    setuptools >= 40.5.0
    # List all packages required for installing your package (Running setup.py)
# str
python_requires = >=3.6
    # Define the required python interpreter version to run you package
# list-comma
eager_resources =
    # List of strings naming resources that should be extracted together
    # Only useful if the project will be installed as a zipfile
# list-semi
install_requires =
    # List your packages dependencies
# list-comma
namespace_packages =
    # List your namespaced packages following pkg_resources-style namespace packages
    # https://packaging.python.org/guides/packaging-namespace-packages/#pkg-resources-style-namespace-packages
# bool
include_package_data = False
    # Automatically include any data file, declared inside MANIFEST.in, inside your package
    # It's recommend to use package_data and exclude_package_data instead, if possible

## These options are deprecated or not relevant to the objective of this package
##list-comma
# scripts (DEPRECATED)
##list-comma
# py_modules (IRRELEVANT)
##list-semi
# tests_require (IRRELEVANT)
##list-comma
# dependency_links (DEPRECATED)

# Put data files outside package (This section requires setuptools >= 40.5.0)
[options.data_files]
# install_location = files_path, ...

# Define executable entry-points to this package
[options.entry_points]
gui_scripts =
    # foo = my_package_gui:start_func
console_scripts =
    # baz = my_package.some_module:main_func
distutils.commands =
    # baz = my_package:dist_util_command_class

# Configure find: and find_namespace:
[options.packages.find]
where = src

# Put data files inside package
[options.package_data]
* = VERSION
# package_name = files_pattern, ...

# Extra dependencies, can be installed with: `pip install package[extra]`
[options.extras_require]
# extra_name = requirements, ...
dev =
    twine
    black
    isort
    venvtools
    # Put your development requirements here
docs =
    # Put your documentation requirements here
tests =
    # Put your tests requirements here

# Remove data files from inside package
[options.exclude_package_data]
# package_name = files_pattern, ...
